# Confitec

./: .gitignore  .sample.env  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  settings.toml
confitec/: app.py
confitec/blueprints/restapi/: __init__.py  resources.py
confitec/blueprints/routes/: __init__.py  artists.py
confitec/ext/: cache.py  configuration.py  database.py
confitec/services/: genius.py
docker/redis/: dump.rdb
tests/: test_confitec.py
